Sync liftwizard-example with dropwizard-example.